--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "license": "MIT",
     "private": true,
     "dependencies": {
+        "@discordjs/voice": "^0.16.1",
         "@types/node": "^20.11.20",
         "discord.js": "^14.14.1",
         "dotenv": "^16.4.5",
