--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "license": "MIT",
     "private": true,
     "dependencies": {
+        "@discordjs/opus": "^0.9.0",
         "@discordjs/voice": "^0.16.1",
         "@types/node": "^20.11.20",
         "discord.js": "^14.14.1",
         "dotenv": "^16.4.5",
+        "ffmpeg-static": "^5.2.0",
+        "sodium": "^3.0.2",
         "ts-node": "^10.9.2",
         "typescript": "^5.3.3"
     },
