--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
         "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
         "strict": true,
-        "skipLibCheck": true
+        "skipLibCheck": true,
+        "lib": ["ES2022", "DOM", "DOM.Iterable"]
     },
     "include": ["src/**/*"]
 }
