--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "discord.js": "^14.14.1",
         "dotenv": "^16.4.5",
         "ffmpeg-static": "^5.2.0",
+        "mongoose": "^8.2.0",
         "sodium": "^3.0.2",
         "ts-node": "^10.9.2",
         "typescript": "^5.3.3"
